--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
-    "koa": "^2.15.3"
+    "axios": "^1.7.9",
+    "koa": "^2.15.3",
+    "koa-router": "^13.0.1"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
