--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "koa": "^2.15.3",
     "koa-router": "^13.0.1"
   },
   "scripts": {
     "start": "node server.js"
-  }
+  },
+  "type": "module"
 }
