--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.3",
     "axios": "^1.7.9",
     "chatgpt": "^5.2.5",
     "dotenv": "^16.4.7",
